--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,5 +1,11 @@
 {
   "ConnectionStrings": {
-    "PgDbConnection" : "Server=localhost;Database=database;Port=5432;User Id =testuser;Password=testpass;"
+    "PgDbConnection": "Server=db;Database=database;Port=5432;User Id=testuser;Password=testpass;"
+  },
+
+  "Cloudinary": {
+    "CloudName": "your_cloud_name",
+    "ApiKey": "your_api_key",
+    "ApiSecret": "your_api_secret"
   }
 }
