--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PgDbConnection": "Server=db;Database=database;Port=5432;User Id=testuser;Password=testpass;"
+    "PgDbConnection": ""
   },
 
   "Cloudinary": {
