--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -2,9 +2,9 @@ services:
   db:
     image: postgres:16-alpine
     environment:
-      - POSTGRES_USER=testuser
-      - POSTGRES_PASSWORD=testpass
-      - POSTGRES_DB=database
+    - POSTGRES_USER=${POSTGRES_USER}
+    - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    - POSTGRES_DB=${POSTGRES_DB}
     ports:
       - '5432:5432'
     volumes:
@@ -28,8 +28,11 @@ services:
     environment:
       - ASPNETCORE_URLS=http://+:80
       - MQTT_URI=mqtt://mqtt:1883  # <--- reference the mqtt service name!
-      - ConnectionStrings__PgDbConnection=Host=db;Username=testuser;Password=testpass;Database=database
-      - MQTT_BROKER=mqtt
+      - ConnectionStrings__PgDbConnection=Host=db;Username=${POSTGRES_USER};Password=${POSTGRES_PASSWORD};Database=${POSTGRES_DB}
+      - MQTT_BROKER=${MQTT_BROKER}
+      - Cloudinary__CloudName=${CLOUDINARY_CLOUDNAME}
+      - Cloudinary__ApiKey=${CLOUDINARY_APIKEY}
+      - Cloudinary__ApiSecret=${CLOUDINARY_APISECRET}
     depends_on:
       - db
       - mqtt
