--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -21,8 +21,8 @@ services:
     build:
       context: ./  # or ./backend if Dockerfile is there
       dockerfile: Dockerfile
-    env_file:
-      - ./local.env
+    #env_file:
+    #  - ./local.env
     ports:
       - "5000:80"  # exposes app externally
     environment:
