--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,5 +43,6 @@ jobs:
             export CLOUDINARY_APIKEY="${{ secrets.CLOUDINARY_APIKEY }}"
             export CLOUDINARY_APISECRET="${{ secrets.CLOUDINARY_APISECRET }}"
             
-            docker compose down || true
-            docker compose up -d --build
+            docker compose down -v --remove-orphans || true
+            docker compose build --no-cache
+            docker compose up --build
