--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           username: ${{ secrets.CLOUD_USER }}
           key: ${{ secrets.CLOUD_SSH_KEY }}
           debug: true
-          command_timeout: 300  
+          command_timeout: 300s  
           script: |
             cd ~/my-iot-app/backend
             # stops all containers
