--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -14,6 +14,7 @@ services:
     image: hivemq/hivemq4
     ports:
       - "1883:1883"    # MQTT protocol
+      - "8883:8883"    # TLS Port
       - "8080:8080"    # HiveMQ Web UI (optional)
     restart: unless-stopped
     
