--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,15 @@ jobs:
           script: |
             cd ~/my-iot-app/backend
             # stops all containers
-            docker compose -f docker-compose.yaml down --timeout 20 || true
-            
+              timeout 30 docker compose -f docker-compose.yaml down --timeout 20
+            if [ $? -eq 124 ]; then
+            echo "Timeout reached, killing containers..."
+            docker kill $(docker ps -q) || true
+            docker rm -f $(docker ps -aq) || true
+            sudo systemctl restart docker
+            sleep 10
+            fi
+                    
             sleep 10
             # remove all containers currently not used as it would slow down the process but is left in in case of issues
             # docker compose -f docker-compose.yaml rm -f || true
