--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -28,9 +28,8 @@ services:
       - "5000:80"  # exposes app externally
     environment:
       - ASPNETCORE_URLS=http://+:80
-      - MQTT_URI=mqtt://mqtt:1883  # <--- reference the mqtt service name!
       - ConnectionStrings__PgDbConnection=Host=db;Username=${POSTGRES_USER};Password=${POSTGRES_PASSWORD};Database=${POSTGRES_DB}
-      - MQTT_BROKER=${MQTT_BROKER}
+      - MQTT_BROKER=mqtt
       - Cloudinary__CloudName=${CLOUDINARY_CLOUDNAME}
       - Cloudinary__ApiKey=${CLOUDINARY_APIKEY}
       - Cloudinary__ApiSecret=${CLOUDINARY_APISECRET}
