--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@
 on:
   push:
     branches:
-      - main
+      - main 
 
 jobs:
   build-and-deploy:
@@ -13,6 +13,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
+
       - name: SSH - Clean up existing docker containers & volumes
         uses: appleboy/ssh-action@v0.1.7
         with:
@@ -20,20 +21,29 @@ jobs:
           username: ${{ secrets.CLOUD_USER }}
           key: ${{ secrets.CLOUD_SSH_KEY }}
           debug: true
-          command_timeout: 120s
+          command_timeout: 120s  
           script: |
             cd ~/my-iot-app/backend
-            timeout 30 docker compose -f docker-compose.yaml down --timeout 20
+            # stops all containers
+              timeout 30 docker compose -f docker-compose.yaml down --timeout 20
             if [ $? -eq 124 ]; then
-              echo "Timeout reached, killing containers..."
-              docker kill $(docker ps -q) || true
-              docker rm -f $(docker ps -aq) || true
-              sudo systemctl restart docker
-              sleep 10
-            fi
+            echo "Timeout reached, killing containers..."
+            docker kill $(docker ps -q) || true
+            docker rm -f $(docker ps -aq) || true
+            sudo systemctl restart docker
             sleep 10
-            # Optional: prune unused networks to avoid stale network issues
-            docker network prune -f || true
+            fi
+                    
+            sleep 10
+            # remove all containers currently not used as it would slow down the process but is left in in case of issues
+            # docker compose -f docker-compose.yaml rm -f || true
+            
+            # Optional: prune unused volumes (be careful in production) currently not used
+            # docker volume prune -f || true
+            
+            # Optional: prune unused images and networks
+            # docker system prune -f || true
+
 
       - name: Copy project files to server
         uses: appleboy/scp-action@v0.1.7
@@ -45,49 +55,34 @@ jobs:
           target: "my-iot-app/"
           rm: true
 
+
       - name: SSH and deploy
         uses: appleboy/ssh-action@v0.1.7
         with:
           host: ${{ secrets.CLOUD_SERVER_IP }}
           username: ${{ secrets.CLOUD_USER }}
           key: ${{ secrets.CLOUD_SSH_KEY }}
-          debug: true
           script: |
             cd ~/my-iot-app/backend
             
-            # Create .env file with secrets
-            echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" > .env
+            echo "ASPNETCORE_URLS=http://+:80" > .env
+            echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env
             echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
             echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> .env
             echo "MQTT_BROKER=${{ secrets.MQTT_BROKER }}" >> .env
-            echo "CLOUDINARY_CLOUDNAME=${{ secrets.CLOUDINARY_CLOUDNAME }}" >> .env
-            echo "CLOUDINARY_APIKEY=${{ secrets.CLOUDINARY_APIKEY }}" >> .env
-            echo "CLOUDINARY_APISECRET=${{ secrets.CLOUDINARY_APISECRET }}" >> .env
+            echo "Cloudinary__CloudName=${{ secrets.CLOUDINARY_CLOUDNAME }}" >> .env
+            echo "Cloudinary__ApiKey=${{ secrets.CLOUDINARY_APIKEY }}" >> .env
+            echo "Cloudinary__ApiSecret=${{ secrets.CLOUDINARY_APISECRET }}" >> .env
+            echo "ConnectionStrings__PgDbConnection=Host=db;Username=${{ secrets.POSTGRES_USER }};Password=${{ secrets.POSTGRES_PASSWORD }};Database=${{ secrets.POSTGRES_DB }}" >> .env
 
-            # Build and start containers
+            export POSTGRES_USER="${{ secrets.POSTGRES_USER }}"
+            export POSTGRES_PASSWORD="${{ secrets.POSTGRES_PASSWORD }}"
+            export POSTGRES_DB="${{ secrets.POSTGRES_DB }}"
+            export MQTT_BROKER="${{ secrets.MQTT_BROKER }}"
+            export CLOUDINARY_CLOUDNAME="${{ secrets.CLOUDINARY_CLOUDNAME }}"
+            export CLOUDINARY_APIKEY="${{ secrets.CLOUDINARY_APIKEY }}"
+            export CLOUDINARY_APISECRET="${{ secrets.CLOUDINARY_APISECRET }}"
+
             docker compose -f docker-compose.yaml build --no-cache
             docker compose -f docker-compose.yaml up --build -d
-
-            # Debug info - list containers, networks and inspect compose network
-            echo "==== Docker containers ===="
-            docker ps -a
-
-            echo "==== Docker networks ===="
-            docker network ls
-
-            echo "==== Inspect backend_default network ===="
-            docker network inspect backend_default || echo "Network backend_default not found"
-
-            echo "==== Docker Compose status ===="
-            docker compose -f docker-compose.yaml ps
-
-            # Check environment variables inside app container
-            APP_CONTAINER=$(docker ps --filter "name=backend-app-1" --format "{{.ID}}")
-            if [ -n "$APP_CONTAINER" ]; then
-              echo "==== Environment variables inside app container ===="
-              docker exec "$APP_CONTAINER" env | grep -E 'POSTGRES|MQTT|CLOUDINARY'
-              echo "==== Logs from app container ===="
-              docker compose -f docker-compose.yaml logs app
-            else
-              echo "App container not found"
-            fi
+      
