--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,13 +56,15 @@ jobs:
             cd ~/my-iot-app/backend
             
             # Create .env file with secrets
-            echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" > .env
+            echo "ASPNETCORE_URLS=http://+:80" > .env
+            echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env
             echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
             echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> .env
             echo "MQTT_BROKER=${{ secrets.MQTT_BROKER }}" >> .env
-            echo "CLOUDINARY_CLOUDNAME=${{ secrets.CLOUDINARY_CLOUDNAME }}" >> .env
-            echo "CLOUDINARY_APIKEY=${{ secrets.CLOUDINARY_APIKEY }}" >> .env
-            echo "CLOUDINARY_APISECRET=${{ secrets.CLOUDINARY_APISECRET }}" >> .env
+            echo "Cloudinary__CloudName=${{ secrets.CLOUDINARY_CLOUDNAME }}" >> .env
+            echo "Cloudinary__ApiKey=${{ secrets.CLOUDINARY_APIKEY }}" >> .env
+            echo "Cloudinary__ApiSecret=${{ secrets.CLOUDINARY_APISECRET }}" >> .env
+            echo "ConnectionStrings__PgDbConnection=Host=db;Username=${{ secrets.POSTGRES_USER }};Password=${{ secrets.POSTGRES_PASSWORD }};Database=${{ secrets.POSTGRES_DB }}" >> .env
 
             # Build and start containers
             docker compose -f docker-compose.yaml build --no-cache
