attempt to fix image test

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -20,5 +20,5 @@ EXPOSE 80
 EXPOSE 443
 
 COPY --from=publish /app/publish .
-
+COPY ImageToTest.jpg ./ImageToTest.jpg
 ENTRYPOINT ["dotnet", "backend.dll"]
