--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
           command_timeout: 120s
           script: |
             cd ~/my-iot-app/backend
-            timeout 30 docker compose -f docker-compose.yaml down --timeout 20
+            timeout --kill-after=10s 30s docker compose -f docker-compose.yaml down --timeout 20
             if [ $? -eq 124 ]; then
               echo "Timeout reached, killing containers..."
               docker kill $(docker ps -q) || true
