--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -20,15 +20,31 @@ services:
     
   app:
     build:
-      context: ./  # or ./backend if Dockerfile is there
+      context: ./  
       dockerfile: Dockerfile
     env_file:
       - .env
     ports:
-      - "5000:80"  # exposes app externally
+      - "5000:80"  
     depends_on:
       - db
       - mqtt
+  
+  nginx:
+    image: nginx:stable
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/conf.d:/etc/nginx/conf.d
+      - ./nginx/scripts:/scripts
+      - ./nginx/certs:/etc/nginx/certs
+    depends_on:
+      - app
+    entrypoint: ["/bin/bash", "/scripts/entrypoint.sh"]
+    environment:
+      TLS_CERT_B64: ${TLS_CERT_B64}
+      TLS_KEY_B64: ${TLS_KEY_B64}
 
 
 
