--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,8 @@ jobs:
             sleep 10
             # Optional: prune unused networks to avoid stale network issues
             docker network prune -f || true
+            sudo rm -rf ~/my-iot-app/backend/nginx/certs/
+            
 
       - name: Copy project files to server
         uses: appleboy/scp-action@v0.1.7
